Fix Dark mode and responsiveness on PageRSEProtocols Fixes #372

--- a/src/component-library/outputtailwind.css
+++ b/src/component-library/outputtailwind.css
@@ -2749,6 +2749,10 @@ html {
     display: none;
   }
 
+  .sm\:w-10 {
+    width: 2.5rem;
+  }
+
   .sm\:w-24 {
     width: 6rem;
   }
@@ -3013,8 +3017,20 @@ html {
     grid-column: span 2 / span 2;
   }
 
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:w-32 {
     width: 8rem;
+  }
+
+  .lg\:w-36 {
+    width: 9rem;
   }
 
   .lg\:w-48 {
